--- a/wercker.yml
+++ b/wercker.yml
@@ -1,2 +1,26 @@
 box: wercker/php
-build:
+
+deploy:
+  steps:
+  - add-to-known_hosts:
+        hostname: 104.131.69.236
+  - mktemp:
+      envvar: PRIVATEKEY_PATH
+  - create-file:
+      name: write key
+      filename: $PRIVATEKEY_PATH
+      content: $FOO_PRIVATE
+      overwrite: true
+      hide-from-log: true
+  - script:
+      name: stop application
+      code: ssh -i $PRIVATEKEY_PATH -l root -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no 104.131.69.236 stop gocities
+  - script:
+      name: transfer application
+      code: |
+        pwd
+        ls -la
+        scp -i $PRIVATEKEY_PATH -o StrictHostKeyChecking=no -o UserKnownHostsFile=no digitalocean-test root@104.131.69.236:/var/local/www
+  - script:
+      name: start application
+      code: ssh -i $PRIVATEKEY_PATH -l root -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no 104.131.69.236 start gocities
